tests/integration/errors/continue_outside_loop.rsg
// TEST: compile_error
// EXPECT-ERROR: 'continue' outside of loop

fn main() {
    continue
}
